# number_recognize

./: .gitignore  README.md  location.txt  number_recognize.sln
Addition/: Addition.vcxproj  Addition.vcxproj.filters  addition.cpp
function/: CMakeLists.txt  fucntion_main.cpp  function.vcxproj  function.vcxproj.filters  function_main.cpp  location.txt
number_recognize/: CMakeLists.txt  Svm_for_two.xml  Train_Data.xml  Train_Process.cpp  Train_Process.h  label.xml  location.txt  location.xml  number_recognize.vcxproj  number_recognize.vcxproj.filters  svm.xml  train.avi  train_main.cpp
